--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "peacecoin-gateway",
   "version": "1.0.0",
+  "description": "Peacecoin Gateway UI",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
-}"@vitejs/plugin-react": "^4.0.0""devDependencies": {
-  "vite": "^4.0.0",
-  "@vitejs/plugin-react": "^4.0.0"
 }
